--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,11 +16,11 @@
 <script type="text/javascript"
 	th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
 
-<title>Spring Boot MongoDB Demo</title>
+<title>Spring Boot Demo</title>
 </head>
 <body>
 	<div class="container">
-		<h1 class="text-center">Spring Boot + MongoDB</h1>
+		<h1 class="text-center">Spring Boot</h1>
 		<div class="col-md-6">
 			<form name="saveUser" action="/save" method="post"
 				class="form-horizontal">
@@ -66,15 +66,15 @@
 
 		<div class="row-md-8">
 			<div class="col-md-3">
-				<img th:src="@{/img/srijanlogo.png}" alt="logo" height="65">
+				<img th:src="@{/img/pesterlogo.jpg}" alt="logo" height="65">
 			</div>
 			<div class="col-md-8">
-				<h4 class="text-center">Srijan Technologies - 
-                                       Modernizing your Digital Systems.</h4>
-				<h4 class="text-center">Contact @ +91-7348802800</h4>
+				<h4 class="text-center"> Pester Pac Automation- 
+                                       Machinary Manufacturing.</h4>
+				<h4 class="text-center">Contact @ +91-7569738569</h4>
 				<h5 class="text-center">
-					Copyrights 2021 by <a href="https://www.srijan.net/">Srijan
-						Technologies</a>
+					Copyrights 2022 by <a href="https://www.pester.com/">pester 
+						pac automation</a>
 				</h5>
 			</div>
 		</div>
